# turnip

./: .envrc  .gitignore  CLAUDE.md  CONFIG-SKETCH.md  HANDOFF.md  IMPLEMENTATION-PLAN.md  LICENSE  README.md  bridge-setup.sh  config.py  fabric.example.json  fabric.py  flake.nix  go.mod  go.sum  justfile  lan-attach.py  m4-privilege-probe.py  main.py  netns.py  netns_util.py  nftlib.py  nftops.py  pyproject.toml  route.py  run-container.sh  test.sh  todo.md  turnip.example.json  verify.py
cmd/turnip/: apply.go  down.go  main.go  model.go  plan.go  probe.go  up.go  up_test.go
docs/: ARCHITECTURE.md  CONFIG-SKETCH-substrate.md  CONFIG-SKETCH.md  SYSCTLS.md  TEST-PLAN.md  todo.md
internal/config/: config.go  config_test.go  validate.go
internal/dataplane/: dataplane.go  hostedge.go  links.go  links_test.go  nft.go  nft_test.go  sysctls.go  sysctls_test.go
internal/netns/: netns.go  netns_test.go
internal/nftlib/: nftlib.go  nftlib_test.go
lib/: default.nix
nix/: base-vm.nix  host-vm.nix  lib.nix  ssh-vm.sh  testvm.nix  testvm_key  turnip-host.nix  vm.sh  world-vm.nix
nix/demo/: base.nix  demo-script.nix  homelab.nix  server.py  tour.sh
nix/lib/: default.nix  outputs.nix  turnip.nix
nix/vm/: base-interactive.nix  base-vm.nix  default.nix  host-base.nix  interactive.nix  peer-echo.nix  probe-image.nix  testvm_key.pub  world-base.nix
old/lib/: python-env.nix
old/tests/: test_config.py  test_nftlib.py  turnip.example.json
spike/go-netns-bootstrap/: .gitignore  README.md  go.mod  go.sum  main.go
src/container_network/: __init__.py  config.py  nftlib.py
src/turnip/: __init__.py  config.py  main.py  netns.py  nftlib.py
test/integration/: integration_test.go
tests/: test_config.py  test_env.py  test_main.py  test_netns.py  test_nftlib.py
tests/golden/: build_nft.json
tests/integration/: _connect.py  _serve.py  conftest.py  harness.py  probe.py  scenario_linklan.py  scenario_links.py  scenario_router.py  scenario_uplink.py  scenarios.py  (+1 more)
(+28 files in other folders)
