[project]
name = "container-network"
version = "0.1.0"
description = "Persistent rootless container network: a routed (Cilium-style) L3 fabric over podman netns"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pyroute2>=0.9.6",
]

[dependency-groups]
dev = [
    "pyright>=1.1.410",
    "ruff>=0.15.16",
]

[tool.pyright]
include = ["."]
exclude = [".venv", ".direnv", "netns", "**/__pycache__", "typings"]
stubPath = "typings"
pythonVersion = "3.14"
typeCheckingMode = "strict"
