[project]
name = "turnip"
version = "0.1.0"
description = "Persistent rootless container network: a routed (Cilium-style) L3 network over podman netns"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.13.4",
    "pyroute2>=0.9.6",
]

[project.scripts]
turnip = "turnip.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/turnip"]

[dependency-groups]
dev = [
    "pyright>=1.1.410",
    "pytest>=8.3.0",
    "ruff>=0.15.16",
]

[tool.pyright]
include = ["src", "tests"]
exclude = ["**/__pycache__"]
stubPath = "typings"
pythonVersion = "3.14"
typeCheckingMode = "strict"

# Tests poke at union/optional members after runtime validation (e.g.
# attachment.egress[0] on a `bool | list`, network.uplink.link on an Optional),
# which strict mode rightly flags in library code but is just noise in asserts.
# Keep src strict; relax those few reports under tests/.
[[tool.pyright.executionEnvironments]]
root = "tests"
reportOptionalMemberAccess = "none"
reportIndexIssue = "none"
reportUnknownMemberType = "none"
reportUnknownVariableType = "none"
reportUnknownArgumentType = "none"

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
